--- a/Petini_Capston_Mini/src/app/shop-owner/manage-account/account-detail/account-detail.component.html
+++ b/Petini_Capston_Mini/src/app/shop-owner/manage-account/account-detail/account-detail.component.html
@@ -36,7 +36,7 @@
                   <mat-form-field class="input-username w-100" appearance="outline">
                     <mat-label>Số điện thoại</mat-label>
                     <input matInput readonly  type="tel" name="txtPhone"
-                     [(ngModel)]="username">
+                     [(ngModel)]="phone">
                     <mat-icon matPrefix><i class="fa-solid fa-phone"></i></mat-icon>
 
                   </mat-form-field>
