--- a/Petini_Capston_Mini/src/app/login/login.component.html
+++ b/Petini_Capston_Mini/src/app/login/login.component.html
@@ -66,27 +66,27 @@
                       <a routerLink="/Home"><img src="/assets/images/logo.png"> </a>
                     </div>
                     <div class="login-text">
-                      <h2>Sign In | Petini</h2>
+                      <h2>Đăng nhập | Petini</h2>
                     </div>
 
                     <form (ngSubmit)="login()">
                       <div class="login-input">
                         <div class="username">
                           <mat-form-field class="input-username w-100" appearance="outline">
-                            <mat-label>Username</mat-label>
+                            <mat-label>Tên đăng nhập</mat-label>
                             <input matInput type="text" required="Please Enter Username" [formControl]="usernameFormControl"
                               [errorStateMatcher]="matcher" name="txtUsername">
                             <mat-icon matPrefix><i class="fa-solid fa-user"></i></mat-icon>
                             <mat-error *ngIf="usernameFormControl.hasError('required')">
-                              Username is <strong>required</strong>
+                              Xinh nhập <strong>tên đăng nhập</strong>
                             </mat-error>
                           </mat-form-field>
                         </div>
                         <div class="password">
                           <mat-form-field class="input-password w-100" appearance="outline">
-                            <mat-label>Password</mat-label>
+                            <mat-label>Mật khẩu</mat-label>
                             <input matInput type="password" name="txtPassword" [formControl]="passwordFormControl" formControlName="control"
-                              [errorStateMatcher]="matcher" required="Please Enter Password"
+                              [errorStateMatcher]="matcher" required="Xin nhập mật khẩu"
                               [type]="hide ? 'password' : 'text'">
                             <mat-icon matPrefix><i class="fa-solid fa-key"></i></mat-icon>
                             <button type="button" class="border-0 bg-body " mat-icon-button matSuffix (click)="hide = !hide"
@@ -103,12 +103,12 @@
                       <div class="text-center pt-1  pb-1 login-button-div">
                         <button class="login-button btn btn-primary btn-block w-100 fa-lg gradient-custom-2 mb-3"
                           mat-raised-button type="submit">
-                          Log in</button>
+                          Đăng nhập</button>
                       </div>
                     </form>
 
                     <hr class="my-4">
-                    <span ><a routerLink="/Register">Create new account</a> </span>
+                    <span ><a routerLink="/Register">Tạo tài khoản mới</a> </span>
                     <!--<button class="gmail-button btn btn-lg btn-block btn-primary w-100 " style="background-color: #dd4b39;"
                     mat-raised-button><i class="fab fa-google me-2"></i> Sign in with Google</button> -->
                   </div>
